fix: text alignment issue on iOS when content has only one line

--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -55,19 +55,24 @@ page {
 .page-bottom {
   .util-breathing-space;
 
-  .textarea-group {
+  .input-group {
     display: flex;
     padding: 8px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 0.375rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
-
-    .textarea {
+    .textarea-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       flex: 1;
-      padding: 8rpx;
-      border-radius: 0.375rem;
-      max-height: 50vh;
+
+      .textarea {
+        padding: 8rpx;
+        border-radius: 0.375rem;
+        max-height: 50vh;
+      }
     }
 
     .btn-container {
